[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique-id"
path = "src/bin/unique-id.rs"
